# study

./: .clang-format  CMakeLists.txt  LICENSE
capnproto/: CMakeLists.txt  main.cpp
capnproto/client/: CMakeLists.txt  client.cpp
capnproto/schemas/: CMakeLists.txt  study.capnp
capnproto/server/: CMakeLists.txt  server.cpp  server.h
libarchive/: CMakeLists.txt  main.cpp
libarchive/test_data/: aaaa.tar  aaaa.tar_00  aaaa.tar_01  data.tar_00  data.tar_01
opencryptoki/: CMakeLists.txt  main.cpp  study_opencryptoki.cpp  study_opencryptoki.h
sqlite3/: CMakeLists.txt  main.cpp  study_sqlite3.cpp  study_sqlite3.h
sqlite3/database/: study_broken.db
test/: CMakeLists.txt  study_opencryptoki_test.cpp  study_sqlite3_test.cpp
test/data/libarchive/: data.7z  sha512sum.txt
test/data/opencryptoki/: data.7z  data.tar_00  data.tar_01  data.tar_02  sha256sum.txt  study.db  study_broken.db
test/data/sqlite3/: study.db
